# Cpp2018

./: .gitignore  CPP2018-Git.code-workspace
backup/uebung01/: numbers.txt  numbers_broken.txt
backup/uebung03/: CMakeLists.txt  main.c  model.h
backup/uebung04/: CMakeLists.txt  Camera.hpp  Main.cpp  MainWindow.hpp  Model.cpp  Model.hpp  PLYIO.cpp
backup/uebung05/: CMakeLists.txt  Camera.hpp  MainWindow.cpp  Matrix.cpp  Model.cpp  Model.hpp  Quaternion.hpp  Vector.hpp
backup/uebung06/: MainWindow.cpp  MainWindow.hpp  Matrix.hpp  Vector.cpp  Vector.hpp
backup/uebung07/: CMakeLists.txt  Camera.hpp  Main.cpp  MainWindow.hpp  Matrix.cpp  Renderable2D.cpp  Renderable3D.cpp  TriangleMesh.cpp  Vector.cpp  Vector.hpp
backup/uebung08/: CMakeLists.txt
backup/uebung08/io/: Read3DS.hpp  ReadJPG.cpp
backup/uebung08/rendering/: AsteroidField.cpp  SpaceCraft.cpp  SpaceCraft.hpp  Texture.cpp  Texture.hpp  TexturedMesh.cpp  TexturedMesh.hpp
backup/uebung08/ui/: Camera.cpp  MainWindow.hpp
backup/uebung08/util/: List.tcc
backup/uebung09/: CMakeLists.txt
backup/uebung09/io/: Read3DS.hpp  ReadPLY.hpp  TextureFactory.cpp  TextureFactory.hpp
backup/uebung09/math/: Vector.hpp
musterloesungen/uebung03/: main.c  mainwindow.c  mainwindow.h  model.c  model.h  plyio.c  plyio.h
musterloesungen/uebung04/: CMakeLists.txt  Camera.cpp  MainWindow.cpp  MainWindow.hpp
musterloesungen/uebung05/: MainWindow.cpp  MainWindow.hpp  Matrix.cpp  Model.cpp  Quaternion.cpp  Quaternion.hpp
musterloesungen/uebung07/: CMakeLists.txt  Camera.cpp  List.hpp  List.tcc  MainWindow.cpp  MainWindow.hpp  Matrix.cpp  Matrix.hpp  Rectangle.hpp  Renderable.hpp  Renderable3D.cpp  Vector.tcc
uebung01/: 1_2.txt  Makefile  break_words.c  first_diff.c  gaussian.txt  gsl_ran.c  line_mean.c  line_mean_old.c  text1.txt  text2.txt
uebung02/: Aufgabe_2_2.txt  Makefile  SodukuFunctions.c  SodukuFunctions.h  SodukuSolver.c
uebung03/: 2_1.txt  3_1.txt  CMakeCache.txt  Makefile  Snippets.txt  asteroids  cmake_install.cmake  main.c  mainwindow.c  model.c  plyio.c  plyio.h
uebung04/: Camera.cpp  Camera.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  PLYIO.hpp
uebung05/: Camera.cpp  Main.cpp  Matrix.cpp  Matrix.hpp  Model.cpp  Quaternion.cpp  Quaternion.hpp  Test.cpp  Vector.cpp  Vector.hpp
uebung06/: CMakeLists.txt  Camera.cpp  Doxyfile  INFO.txt  Main.cpp  MainWindow.cpp  Matrix.cpp  make_build.sh
uebung06/exceptions/: BaseException.cpp  BaseException.hpp  DivisionByZeroException.cpp  DivisionByZeroException.hpp  OutOfBoundsException.cpp  OutOfBoundsException.hpp
uebung06/renderOBJ/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Renderable.hpp  Renderable2D.cpp  Renderable2D.hpp  Renderable3D.cpp  Renderable3D.hpp  Sphere.cpp  Sphere.hpp  TriangleMesh.cpp  TriangleMesh.hpp
uebung07/: CMakeLists.txt  Circle.cpp  Circle.hpp  ListTest.cpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  Rectangle.cpp  Renderable3D.cpp  Renderable3D.hpp  Sphere.cpp  TriangleMesh.hpp  Vector.hpp  Vector.tcc  print_code.tex
uebung08/: CMakeLists.txt  Doxyfile  Main.cpp
uebung08/Aufgabe1/: Aufgabe1_1.cpp  Aufgabe1_2.cpp  Aufgabe1_3.cpp  CMakeLists.txt
uebung08/io/: Read3DS.cpp  Read3DS.hpp  ReadPLY.cpp  ReadTIFF.cpp  TextureFactory.cpp  TextureFactory.hpp  TriangleMeshFactory.cpp  TriangleMeshFactory.hpp
uebung08/math/: Quaternion.cpp  Quaternion.hpp  Randomizer.cpp  Randomizer.hpp  Vector.hpp  Vector.tcc
uebung08/rendering/: Asteroid.cpp  Asteroid.hpp  AsteroidField.cpp  AsteroidField.hpp  Renderable2D.cpp  Renderable2D.hpp  Renderable3D.cpp  Skybox.cpp  Skybox.hpp  SpaceCraft.cpp  SpaceCraft.hpp  Texture.cpp  TexturedMesh.cpp
uebung08/util/: List.hpp  List.tcc  text.cpp
uebung09/: Aufgabe_1.txt  CMakeLists.txt  Functionals.cpp  Main.cpp  make_build.sh  print_code.tex
uebung09/io/: BitmapReader.hpp  MeshReader.hpp  Read3DS.cpp  ReadJPG.cpp  ReadOBJ.cpp  ReadOBJ.hpp  ReadPLY.cpp  ReadPLY.hpp  ReadPPM.cpp  ReadTGA.cpp  ReadTGA.hpp  TextureFactory.cpp  TextureFactory.hpp  TriangleMeshFactory.cpp  TriangleMeshFactory.hpp
uebung09/math/: Matrix.cpp  Matrix.hpp
uebung09/rendering/: Asteroid.cpp  Asteroid.hpp  AsteroidField.cpp  Materials.hpp  Renderable.hpp  Renderable2D.hpp  Skybox.cpp  Skybox.hpp  SpaceCraft.cpp  SpaceCraft.hpp  Texture.cpp  Texture.hpp  TexturedMesh.cpp  TexturedMesh.hpp  TriangleMesh.cpp  TriangleMesh.hpp
uebung09/util/: shared_array.hpp  shared_array.tcc
uebung09/view/: MainWindow.cpp  MainWindow.hpp
uebung10/: CMakeLists.txt  Main.cpp  print_code.tex
uebung10/Aufgabe10.1/: Aufgabe1.txt  thread1.cpp  thread2.cpp  thread3.cpp
uebung10/math/: Randomizer.hpp  Vector.hpp  Vector.tcc
uebung10/rendering/: Asteroid.cpp  AsteroidField.hpp  Bullet.cpp  Bullet.hpp  Circle.hpp  Renderable2D.cpp  Renderable3D.cpp  Renderable3D.hpp  Skybox.hpp  SpaceCraft.cpp  SpaceCraft.hpp  Sphere.cpp  TexturedMesh.hpp  TriangleMesh.cpp  TriangleMesh.hpp
uebung11/: BoostGraphExample.cpp  CMakeLists.txt  Main.cpp  make_build.sh
uebung11/io/: LevelParser.cpp  LevelParser.hpp  ReadPLY.hpp
uebung11/math/: Vector.hpp  Vector.tcc
uebung11/rendering/: Asteroid.hpp  AsteroidField.cpp  AsteroidField.hpp  Bullet.cpp  Bullet.hpp  NavigationRoute.cpp  NavigationRoute.hpp  Rectangle.hpp  Renderable3D.cpp  Renderable3D.hpp  Skybox.cpp  Skybox.hpp  SpaceCraft.cpp  SpaceCraft.hpp  Sphere.hpp  Texture.cpp  Texture.hpp  TexturedMesh.cpp
uebung11/util/: PathPlanner.cpp  PathPlanner.hpp
uebung11/view/: MainWindow.cpp  MainWindow.hpp
uebung12/: CMakeLists.txt  Main.cpp  make_build.sh
uebung12/Aufgabe1/: Aufgabe1.txt  Foo.cpp  Traits.cpp
uebung12/math/: Vector.hpp  Vector.tcc
uebung12/physics/: ParticleEngine.cpp  ParticleEngine.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Transformable.hpp
uebung12/rendering/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  Circle.hpp  Rectangle.hpp  Renderable.hpp  Renderable2D.hpp  Renderable3D.cpp  Renderable3D.hpp  SpaceCraft.hpp
uebung12/view/: Camera.cpp  Camera.hpp  MainWindow.cpp  MainWindow.hpp
(+22 files in other folders)
